DB-4979 Add coverage tooling
Conflicts:
	hbase_sql/pom.xml
	mem_sql/pom.xml
	pom.xml
	start-splice-cluster